map.js update to show all coming buses + their times in a table in the popup

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -4,7 +4,7 @@
 }
 
 .phonetics {
-    
+    /* TBD */
 }
 
 .md-grid {
@@ -22,7 +22,16 @@
     width: 100%;
 }
 
-.md-typeset__table table:not([class]) {
+.md-typeset table:not([class]) {
+    background-color: var(--md-default-bg-color);
+    border: .05rem solid var(--md-typeset-table-color);
+    border-radius: .1rem;
+    display: inline-block;
+    font-size: .64rem;
+    max-width: 100%;
+    /* Make table headers in maps sticky */
+    overflow: visible;
+    touch-action: auto;
     display: table;
 }
 
@@ -60,11 +69,22 @@ code {
 
 #map {
     z-index:1;
-    height: 400px;
+    height: 500px;
     border: 2px solid var(--md-primary-fg-color);
     font-size: 12px;
     font-family: var(--md-text-font);
     margin-bottom: 1em;
+}
+
+.table-container {
+    max-height: 400px; /* Adjust the maximum height as needed */
+    overflow: auto;
+}
+
+.table-container thead {
+    position: sticky;
+    top: 0;
+    background-color: var(--md-default-bg-color);
 }
 
 .center-marker {
@@ -75,10 +95,6 @@ code {
 .libelle {
     font-weight: bold;
     display: block;
-}
-
-.waiting-time {
-    font-style: italic;
 }
 
 .language-get::before {
