--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -3,16 +3,24 @@
     --md-primary-bg-color: black;
 }
 
-.phonetics {
-    /* TBD */
-}
-
 .md-grid {
     max-width: 61rem;
 }
 
 .md-header--shadow {
     box-shadow: none;
+}
+
+.md-typeset a, .md-nav--primary .md-nav__item--active > .md-nav__link {
+    color: var(--md-accent-fg-color);
+}
+
+.md-typeset a:hover, .md-nav__link[href]:hover, .md-nav--primary .md-nav__item--active > .md-nav__link:hover {
+    color: var(--md-typeset-a-color);
+}
+
+.phonetics {
+    /* TBD */
 }
 
 /* Make tables occupy whole width of <article> */
@@ -35,12 +43,21 @@
     display: table;
 }
 
-.message {
-    min-height: 39.53px;
-}
-
 code {
     white-space: pre-wrap;
+}
+
+.linkedin-logo {
+    width: 20px;
+    height: 20px;
+    margin: 10px;
+    margin-bottom: 13px;
+}
+
+/* HTML elements in Markdown */
+
+.message {
+    min-height: 39.53px;
 }
 
 .tagline {
@@ -67,6 +84,19 @@ code {
     justify-content: center;
 }
 
+.language-get::before {
+    content: "GET";
+    font-size: 15px;
+    font-weight: bold;
+    padding-right: 30px;
+}
+
+.do_not_break {
+    display: inline-block;
+}
+
+/* Leaflet */
+
 #map {
     z-index:1;
     height: 500px;
@@ -86,6 +116,11 @@ code {
     color: var(--md-typeset-color) !important;
 }
 
+.leaflet-bar a {
+    color: var(--md-typeset-color);
+    background-color: var(--md-default-bg-color);
+}
+
 .table-container thead {
     position: sticky;
     top: 0;
@@ -100,30 +135,4 @@ code {
 .libelle {
     font-weight: bold;
     display: block;
-}
-
-.language-get::before {
-    content: "GET";
-    font-size: 15px;
-    font-weight: bold;
-    padding-right: 30px;
-}
-
-.linkedin-logo {
-    width: 20px;
-    height: 20px;
-    margin: 10px;
-    margin-bottom: 13px;
-}
-
-.do_not_break {
-    display: inline-block;
-}
-
-.md-typeset a, .md-nav--primary .md-nav__item--active > .md-nav__link {
-    color: var(--md-accent-fg-color);
-}
-
-.md-typeset a:hover, .md-nav__link[href]:hover, .md-nav--primary .md-nav__item--active > .md-nav__link:hover {
-    color: var(--md-typeset-a-color);
 }
