--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -7,10 +7,6 @@ footer {
     display: none;
 }
 
-.md-grid {
-    max-width: 61rem;
-}
-
 .md-header--shadow {
     box-shadow: none;
 }
@@ -52,6 +48,13 @@ code {
 }
 
 .linkedin-logo {
+    width: 20px;
+    height: 20px;
+    margin: 10px;
+    margin-bottom: 13px;
+}
+
+.github-logo {
     width: 20px;
     height: 20px;
     margin: 10px;
@@ -111,7 +114,7 @@ code {
 }
 
 .table-container {
-    max-height: 400px; /* Adjust the maximum height as needed */
+    max-height: 400px;
     overflow: auto;
 }
 
